Initial Jim Wendler page commit

--- a/OneStopFitness/WebContent/WEB-INF/web.xml
+++ b/OneStopFitness/WebContent/WEB-INF/web.xml
@@ -28,7 +28,7 @@
 
 	<servlet-mapping>
 		<servlet-name>eOneStopFitness</servlet-name>
-		<url-pattern>/controller/*</url-pattern>
+		<url-pattern>/app/*</url-pattern>
 	</servlet-mapping>
 	
 <!--   -->
