--- a/OneStopFitness/ivy.xml
+++ b/OneStopFitness/ivy.xml
@@ -30,6 +30,9 @@
 		<dependency org="org.springframework" name="spring-web" rev="4.1.6.RELEASE"/>
 		<dependency org="org.springframework" name="spring-core" rev="4.1.6.RELEASE"/>
 		<dependency org="org.springframework" name="spring-beans" rev="4.1.6.RELEASE"/>
+		<dependency org="org.springframework.security" name="spring-security-core" rev="4.0.2.RELEASE"/>
+		<dependency org="org.springframework.security" name="spring-security-config" rev="4.0.2.RELEASE"/>
+		
 		
 
 		<exclude org="ant" module="ant" />
