--- a/OneStopFitness/ivy.xml
+++ b/OneStopFitness/ivy.xml
@@ -32,8 +32,10 @@
 		<dependency org="org.springframework" name="spring-beans" rev="4.1.6.RELEASE"/>
 		<dependency org="org.springframework.security" name="spring-security-core" rev="4.0.2.RELEASE"/>
 		<dependency org="org.springframework.security" name="spring-security-config" rev="4.0.2.RELEASE"/>
-		
-		
+		<dependency org="org.springframework" name="spring-aop" rev="4.1.6.RELEASE"/>
+		<dependency org="org.springframework" name="spring-jdbc" rev="4.1.6.RELEASE"/>
+		<dependency org="org.springframework" name="spring-expression" rev="4.1.6.RELEASE"/>
+		<dependency org="org.springframework" name="spring-tx" rev="4.1.0.RELEASE"/>
 
 		<exclude org="ant" module="ant" />
 		<exclude org="org.apache.ant" module="ant" />
