--- a/OneStopFitness/WebContent/WEB-INF/web.xml
+++ b/OneStopFitness/WebContent/WEB-INF/web.xml
@@ -34,6 +34,11 @@
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+	
+    <listener>
+        <listener-class>com.github.bcsuther.onestopfitness.security.ServletContextSetup</listener-class>
+    </listener>
+    
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
