--- a/OneStopFitness/ivy.xml
+++ b/OneStopFitness/ivy.xml
@@ -21,9 +21,8 @@
 		<dependency org="org.javassist" name="javassist" rev="3.18.2-GA"/>
 		<dependency org="org.apache.tomcat" name="tomcat-dbcp" rev="7.0.55"/>
 		
-		<dependency org="javax.mail" name="mail" rev="1.4" conf="default->default" />
 		<dependency org="javax.servlet" name="jstl" rev="1.2"/>
-		<dependency org="javax.transaction" name="jta" rev="1.1" conf="default->default" />
+		<dependency org="javax.servlet" name="javax.servlet-api" rev="3.0.1"/>
 		
 		<dependency org="org.springframework" name="spring-context" rev="4.1.6.RELEASE"/>
 		<dependency org="org.springframework" name="spring-webmvc" rev="4.1.6.RELEASE"/>
@@ -43,8 +42,5 @@
 		<exclude org="bouncycastle" module="bcmail-jdk14" matcher="exact" />
 		<exclude org="bouncycastle" module="bcprov-jdk14" matcher="exact" />
 		<exclude org="org.springframework" module="spring-asm" matcher="exact" />
-		<exclude org="com.sun.jdmk"/>
-  		<exclude org="com.sun.jmx"/>
- 		<exclude org="javax.jms"/>
 	</dependencies>
 </ivy-module>
