--- a/OneStopFitness/ivy.xml
+++ b/OneStopFitness/ivy.xml
@@ -2,7 +2,6 @@
 <ivy-module version="2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd">
     <info organisation="One Stop Fitness" module="OneStopFitness" status="integration" />
-		
 	<dependencies>
 		<dependency org="commons-io" name="commons-io" rev="1.4" changing="true" conf="default->default" />
 		<dependency org="commons-fileupload" name="commons-fileupload" rev="1.3.1" changing="true" conf="default->default" />
@@ -22,7 +21,7 @@
 		<dependency org="org.apache.tomcat" name="tomcat-dbcp" rev="7.0.55"/>
 		
 		<dependency org="javax.servlet" name="jstl" rev="1.2"/>
-		<dependency org="javax.servlet" name="javax.servlet-api" rev="3.0.1"/>
+		<dependency org="javax.servlet" name="javax.servlet-api" rev="3.0.1" conf="default->default"/>
 		
 		<dependency org="org.springframework" name="spring-context" rev="4.1.6.RELEASE"/>
 		<dependency org="org.springframework" name="spring-webmvc" rev="4.1.6.RELEASE"/>
